// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResearchEditorOverview > handles empty updates 1`] = `
<div>
  <div
    class="css-sbv6lq-Card"
  >
    <h2
      class="css-1vot7yn-Box"
    >
      Research overview
    </h2>
    <button
      class="css-1wcfy94-Button"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-a6mlbr-Text"
      >
        <a
          class="css-e0v029-Link"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-l7psd3-Button"
      type="button"
    >
      <span
        class="css-a6mlbr-Text"
      >
        <a
          class="css-e0v029-Link"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;

exports[`ResearchEditorOverview > handles falsey updates 1`] = `
<div>
  <div
    class="css-sbv6lq-Card"
  >
    <h2
      class="css-1vot7yn-Box"
    >
      Research overview
    </h2>
    <button
      class="css-1wcfy94-Button"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-a6mlbr-Text"
      >
        <a
          class="css-e0v029-Link"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-l7psd3-Button"
      type="button"
    >
      <span
        class="css-a6mlbr-Text"
      >
        <a
          class="css-e0v029-Link"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;

exports[`ResearchEditorOverview > renders correctly 1`] = `
<div>
  <div
    class="css-sbv6lq-Card"
  >
    <h2
      class="css-1vot7yn-Box"
    >
      Research overview
    </h2>
    <ul
      class="css-vebie1-Box"
    >
      <li
        class="css-1dhyciv-Box"
      >
        <span
          class="css-g89m8z-Box"
        >
          <strong>
            Update 1
          </strong>
        </span>
      </li>
      <li
        class="css-1dhyciv-Box"
      >
        <span
          class="css-g89m8z-Box"
        >
          Update 2
          <a
            class="css-1pw6t78-Link"
            href="/research/abc/edit-update/update-2"
          >
            Edit
          </a>
        </span>
      </li>
      <li
        class="css-1dhyciv-Box"
      >
        <span
          class="css-g89m8z-Box"
        >
          Update 3
          <a
            class="css-1pw6t78-Link"
            href="/research/abc/edit-update/update-3"
          >
            Edit
          </a>
        </span>
      </li>
    </ul>
    <button
      class="css-1wcfy94-Button"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-a6mlbr-Text"
      >
        <a
          class="css-e0v029-Link"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-l7psd3-Button"
      type="button"
    >
      <span
        class="css-a6mlbr-Text"
      >
        <a
          class="css-e0v029-Link"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;
